--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -290,7 +290,7 @@
     <!-- FREE WORKSPACE (fallback) -->
 
 <!-- 💡 INTERAKTIVE DEMO -->
-<article class="app" data-href="/Demo.html" style="background:linear-gradient(135deg,#007aff,#00ffa3);color:#fff;text-align:center;">
+<article class="app" data-href="/demo.html" style="background:linear-gradient(135deg,#007aff,#00ffa3);color:#fff;text-align:center;">
   <div class="icon" style="background:rgba(255,255,255,0.15);border:none;">🧠</div>
   <div>
     <h3 style="font-size:18px;margin-bottom:6px;">Interaktive Demo</h3>
@@ -306,7 +306,7 @@
         <article class="card">
           <h3>Schichtbuch (Demo)</h3>
           <p>Teste die Oberfläche im Demo-Modus.</p>
-          <a class="link" href="/Demo.html">Öffnen →</a> 
+          <a class="link" href="/demo.html">Öffnen →</a> 
         </article>
         <article class="card">
           <h3>Tagesjournal (Demo)</h3>
