--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="price-tiers">
         <div class="tier">
           <h4>Starter</h4>
-          <div class="price"><span>29</span> €/Monat</div>
+          <div class="price"><span>-</span> €/Monat</div>
           <ul>
             <li>1 Firma, 2 Module</li>
             <li>Bis 10 Nutzer</li>
@@ -217,7 +217,7 @@
         </div>
         <div class="tier highlight">
           <h4>Team</h4>
-          <div class="price"><span>79</span> €/Monat</div>
+          <div class="price"><span>-</span> €/Monat</div>
           <ul>
             <li>1 Firma, alle Module</li>
             <li>Bis 40 Nutzer</li>
