--- a/app/upgrade.html
+++ b/app/upgrade.html
@@ -3,6 +3,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Upgrade — Tenra (deaktiviert)</title>
+  <style>
+    /* Seite absichtlich leer gehalten.
+       Entferne den Kommentarblock am Ende der Datei, um die alte Seite wieder zu aktivieren. */
+    html, body { background:#fff; margin:0; padding:0; }
+  </style>
+</head>
+<body>
+  <!-- Seite ist bewusst leer. -->
+</body>
+</html>
+
+<!--
+===== UPGRADE-SEITE — ORIGINALCODE (VORÜBERGEHEND DEAKTIVIERT) =====
+
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Upgrade — Tenra</title>
   <link rel="stylesheet" href="/css/style.css" />
   <style>
@@ -87,25 +107,27 @@
     <input id="companyName" type="text" placeholder="z. B. Müller GmbH" required>
 
     <div class="plans">
-  <div class="plan">
-    <h3>Starter</h3>
-    <p>Für kleine Teams bis 10 Mitarbeiter</p>
-    <div class="price">39 €/Monat</div>
-    <button class="btn" data-plan="starter" type="button">Auswählen</button>
-  </div>
+      <div class="plan">
+        <h3>Starter</h3>
+        <p>Für kleine Teams bis 10 Mitarbeiter</p>
+        <div class="price">39 €/Monat</div>
+        <button class="btn" data-plan="starter" type="button">Auswählen</button>
+      </div>
 
-  <div class="plan highlight">
-    <h3>Team</h3>
-    <p>Für wachsende Firmen bis 40 Mitarbeiter</p>
-    <div class="price">79 €/Monat</div>
-    <button class="btn" data-plan="team" type="button">Auswählen</button>
-  </div>
-</div>
+      <div class="plan highlight">
+        <h3>Team</h3>
+        <p>Für wachsende Firmen bis 40 Mitarbeiter</p>
+        <div class="price">79 €/Monat</div>
+        <button class="btn" data-plan="team" type="button">Auswählen</button>
+      </div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
-<script src="/js/supabaseClient.js" defer></script>
-<script src="/js/upgrade.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
+    <script src="/js/supabaseClient.js" defer></script>
+    <script src="/js/upgrade.js" defer></script>
+  </div>
 </body>
 </html>
 
-
+===== ENDE ORIGINALCODE =====
+-->
