--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -189,13 +189,14 @@
           <span class="badge">Essential</span>
         </article>
 
-        <article class="app" data-href="/app/urlaubsplaner.html">
-          <div class="icon">🏖️</div>
-          <div>
-            <h3>Urlaubsplaner</h3>
-            <p>Resttage, Anträge & Kalender</p>
-          </div>
-        </article>
+        <article class="app" data-href="/app/ressourcen.html">
+  <div class="icon">📘</div>
+  <div>
+    <h3>Ressourcen</h3>
+    <p>Anleitungen & Downloads für dein Team</p>
+  </div>
+</article>
+
 
         <article class="app" data-href="/app/FocusPad.html">
           <div class="icon">📝</div>
@@ -217,7 +218,7 @@
           <div class="icon">🙋‍♂️</div>
           <div>
             <h3>Planer</h3>
-            <p>Ma, Band.. Planung</p>
+            <p>Ma Planung</p>
           </div>
         </article>
 
@@ -306,7 +307,7 @@
         <article class="card">
           <h3>Schichtbuch (Demo)</h3>
           <p>Teste die Oberfläche im Demo-Modus.</p>
-          <a class="link" href="/demo.html">Öffnen →</a> 
+          <a class="link" href="/demo.html">Öffnen →</a>
         </article>
         <article class="card">
           <h3>Tagesjournal (Demo)</h3>
@@ -444,7 +445,7 @@ async function showActiveModules(firmaId) {
   // 🔧 Mapping: alternative oder vereinfachte Namen zulassen
   const keyMapping = {
     urlaub: "urlaubsplaner",
-    urlaubsplan: "urlaubsplaner",
+    ressourcen: "ressourcen",
     tagesjournal: "tagesbuch",
     tagebuch: "tagesbuch",
     planner: "planner",
