--- a/app/katalog.html
+++ b/app/katalog.html
@@ -28,7 +28,7 @@
     const defaults = [
       { key: "schichtbuch", name: "Schichtbuch" },
       { key: "focusPad", name: "FocusPad" },
-      { key: "urlaub", name: "Urlaubsplaner" },
+      { key: "ressourcen", name: "ressourcen" },
       { key: "planner", name: "Planer" },
       { key: "statistik", name: "Statistik" },
       { key: "controlling", name: "Controlling" },
