--- a/app/ressourcen.html
+++ b/app/ressourcen.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <header>
-    <a href="/dashboard.html" class="brand"><span class="logo-dot"></span> Tenra</a>
+    <a href="/app/dashboard.html" class="brand"><span class="logo-dot"></span> Tenra</a>
     <span id="roleBadge" class="status"></span>
   </header>
 
