--- a/Pilot.html
+++ b/Pilot.html
@@ -132,6 +132,12 @@ footer{margin:42px 0 30px;color:var(--muted);font-size:14px}
           <li class="li">✅ <b>Abläufe & Aufgaben</b> sichtbar machen – ohne Zettel & Excel</li>
           <li class="li">✅ <b>Übergaben & Hinweise</b> sauber dokumentieren – in Sekunden</li>
           <li class="li">✅ <b>Team-Organisation</b> im Blick – wer macht was, was bleibt offen</li>
+          <div class="note" style="margin-top:16px;font-size:16px">
+  ⚙️ Durchschnittlich verliert ein 30-Mann-Betrieb 
+  <b>3 Stunden pro Tag</b> durch Abstimmung – das sind rund <b>31 000 € pro Jahr.</b><br><br>
+  <b>Tenra macht diese Verluste sichtbar – und verhindert sie.</b>
+</div>
+
         </ul>
         <div class="note" style="margin-top:16px">Hinweis: Die Demo ist bewusst einfach gehalten. Sie können jede Funktion einzeln testen – zuerst Aufgaben, danach Übergaben, später Teamansicht. So entsteht Schritt für Schritt ein klares Bild – ohne alles gleichzeitig klicken zu müssen.</div>
         <div style="margin-top:16px; display:flex; gap:10px; flex-wrap:wrap">
