--- a/Pilot.html
+++ b/Pilot.html
@@ -104,6 +104,8 @@ footer{margin:42px 0 30px;color:var(--muted);font-size:14px}
         <button class="toggle" id="modeToggle" aria-label="Darstellung umschalten">🌗 Darstellung</button>
         <a class="btn ghost" href="https://tenra-demo-5fnd.vercel.app/demo.html" target="_blank">Demo ansehen</a>
 
+        <a class="btn ghost" href="Examples.html">Ergebnisse & Beispiele</a>
+
         <a class="btn btn-primary" href="#teilnahme">Pilot beitreten</a>
       </div>
     </div>
