--- a/Examples.html
+++ b/Examples.html
@@ -72,6 +72,85 @@
   <main class="container">
     <h1 class="headline"><span style="color:#00c68f">Reale Szenarien,</span> anonymisiert – mit klaren Zahlen.</h1>
     <p class="sub">Drei typische Fälle aus Werkstätten/Produktion. Keine Firmennamen. Nur Prozesse, Zeiten, Effekte. Jede Grafik basiert auf plausiblen Ist-/Soll-Werten – so sieht <b>Nutzen</b> aus, nicht PowerPoint.</p>
+<section class="card pad" style="margin-top:20px">
+  <h2 class="h">Was Tenra wirklich kann</h2>
+  <p class="sub" style="margin-bottom:14px">
+    Tenra ist keine einfache „To-Do-App“.  
+    Es ist eine zentrale Arbeitsplattform für Werkstätten, Fertigung und Teams – egal ob Schichtbetrieb oder Einzelanfertigung.  
+    Ziel: **Sofort weniger Suchen, klarere Abläufe, weniger Chaos.**
+  </p>
+
+  <div class="kpi" style="margin-bottom:18px">
+    <div class="box">
+      <div class="lab">📂 Ressourcen</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Freigabebereich für <b>Downloads, Dokumente und Anleitungen</b> –  
+        sofort auffindbar, ohne Netzlaufwerke oder SAP-Suche.
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="lab">🧠 FocusPad</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Digitale Notizen, Übergaben und Hinweise –  
+        <b>pro Linie, Abteilung oder Firma</b> – transparent für alle.
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="lab">📘 Schichtbuch</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Dokumentation von Ereignissen, Stillständen und Schichten –  
+        ersetzt Excel oder ergänzt bestehende Systeme wie IAS / Nexeed.
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="lab">📅 Planer</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Mitarbeiter- und Aufgabenplanung im Browser –  
+        wer ist da, wer übernimmt, was steht morgen an.
+      </div>
+    </div>
+  </div>
+
+  <div class="kpi">
+    <div class="box">
+      <div class="lab">💰 Controlling (in Entwicklung)</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Automatische Auswertung von Aufgabenzeiten, Schichtbuch-Einträgen und Verlustquellen –  
+        <b>sichtbar auf Knopfdruck.</b>
+      </div>
+    </div>
+    <div class="box">
+      <div class="lab">🧩 Erweiterungen</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Neue Module entstehen mit den Pilotbetrieben –  
+        z. B. Freigabeworkflows, digitale Checklisten oder KI-Analysen.
+      </div>
+    </div>
+    <div class="box">
+      <div class="lab">🌐 Universell</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Funktioniert in jedem Browser, keine Installation nötig, läuft lokal oder über Cloud –  
+        ideal für <b>Industrie, Werkstätten, Logistik, Büro</b>.
+      </div>
+    </div>
+    <div class="box">
+      <div class="lab">⚙️ Nutzen</div>
+      <div class="val" style="font-size:15px;line-height:1.4">
+        Nicht nur für Schichtbetriebe.  
+        <b>Tenra spart Zeit, wo Menschen zusammenarbeiten und Informationen fehlen.</b>
+      </div>
+    </div>
+  </div>
+
+  <div class="note" style="margin-top:20px;font-size:15px">
+    Jeder Betrieb nutzt Tenra anders – vom Schichtlogbuch bis zum zentralen Informationshub.  
+    Das Ziel ist immer dasselbe:  
+    <b>Weniger suchen, weniger reden, mehr wissen.</b>
+  </div>
+</section>
 
     <!-- CASE 1 -->
     <section class="card pad" style="margin-top:18px">
