--- a/Examples.html
+++ b/Examples.html
@@ -62,7 +62,7 @@
         <span class="dot"></span><span>Tenra Beispiele</span>
       </a>
       <div class="nav-actions">
-        <a class="btn ghost" href="./index.html">← Zurück</a>
+        <a class="btn ghost" href="./Pilot.html">← Zurück</a>
         <a class="btn ghost" href="https://tenra-demo-5fnd.vercel.app/demo.html" target="_blank">Demo ansehen</a>
         <a class="btn btn-primary" href="#kontakt">Pilot anfragen</a>
       </div>
@@ -359,7 +359,7 @@
       <div class="row">
         <a class="btn btn-primary" href="#" onclick="showMailPopup()">Pilot aufnehmen</a>
 
-        <a class="btn ghost" href="./index.html#roi">ROI jetzt berechnen</a>
+        <a class="btn ghost" href="./Pilot.html#roi">ROI jetzt berechnen</a>
       </div>
     </section>
 
