--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -223,6 +223,15 @@
           </div>
         </article>
 
+        <article class="app" data-href="/app/Matrix.html"> 
+         
+          <div class="icon">📝</div>
+          <div>
+            <h3>Matrix</h3>
+            <p>Sheets, Grid</p>
+          </div>
+        </article>
+
         <article class="app" data-href="/app/controlling.html">
 
   <div class="icon">📊</div>
@@ -451,7 +460,7 @@ async function showActiveModules(firmaId) {
     tagebuch: "tagesbuch",
     planner: "planner",
     controlling: "controlling",
-    stats: "statistik",
+    Matrix: "Matrix",
   };
 
   // 🔍 Module aus DB normalisieren + Mapping anwenden
