--- a/app/katalog.html
+++ b/app/katalog.html
@@ -30,7 +30,7 @@
       { key: "focusPad", name: "FocusPad" },
       { key: "ressourcen", name: "ressourcen" },
       { key: "planner", name: "Planer" },
-      { key: "statistik", name: "Statistik" },
+      { key: "Matrix", name: "Matrix" },
       { key: "controlling", name: "Controlling" },
     ];
 
