--- a/app/Matrix.html
+++ b/app/Matrix.html
@@ -717,7 +717,7 @@
 <body>
   <div class="top-bar">
     <div>
-      <h1>📦 Tenra Excel-Module – Next</h1>
+      <h1>📦 Tenra Matrix-Module – Next</h1>
       <div class="status" id="statusUser">Lade Benutzer…</div>
     </div>
     <div style="display:flex;gap:6px;align-items:center;">
