--- a/app/Matrix.html
+++ b/app/Matrix.html
@@ -722,7 +722,7 @@
     </div>
     <div style="display:flex;gap:6px;align-items:center;">
       <button id="themeToggleBtn" class="small ghost icon" type="button">🌓 Theme</button>
-      <button onclick="window.location.href='/Dashboard.html'" class="small" type="button">← Zur Übersicht</button>
+      <button onclick="window.location.href='/app/dashboard.html'" class="small" type="button">← Zur Übersicht</button>
     </div>
   </div>
 
