--- a/app/aufgaben.html
+++ b/app/aufgaben.html
@@ -259,9 +259,12 @@
     document.getElementById('p_save')?.addEventListener('click', async ()=>{
       const title = document.getElementById('p_title').value.trim();
       const desc = document.getElementById('p_desc').value.trim();
-      if(!title || !state.abt || !state.linie) return alert('Titel, Abteilung & Linie sind erforderlich.');
+      if(!title || !state.abt) return alert('Titel, Abteilung & Linie sind erforderlich.');
       const { error } = await supabase.from('tagesaufgaben_templates').insert({
-  firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie,
+  firma_id: state.firm,
+abteilung_id: state.abt,
+linie_id: state.linie || null,
+
 
         typ: 'permanent', titel: title, beschreibung: desc || null, aktiv: true
       });
@@ -275,9 +278,12 @@
       const title = document.getElementById('o_title').value.trim();
       const desc = document.getElementById('o_desc').value.trim();
       const date = document.getElementById('o_date').value;
-      if(!title || !date || !state.abt || !state.linie) return alert('Titel, Datum, Abteilung & Linie sind erforderlich.');
+      if(!title || !date || !state.abt) return alert('Titel, Datum, Abteilung & Linie sind erforderlich.');
       const { error } = await supabase.from('tagesaufgaben_templates').insert({
-  firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie,
+  firma_id: state.firm,
+abteilung_id: state.abt,
+linie_id: state.linie || null,
+
 
         typ: 'einmalig', datum: date, titel: title, beschreibung: desc || null, aktiv: true
       });
@@ -290,9 +296,12 @@
     document.getElementById('h_save')?.addEventListener('click', async ()=>{
       const text = document.getElementById('h_text').value.trim();
       const date = document.getElementById('h_date').value;
-      if(!text || !date || !state.abt || !state.linie) return alert('Hinweis, Datum, Abteilung & Linie sind erforderlich.');
+      if(!text || !date || !state.abt) return alert('Hinweis, Datum, Abteilung & Linie sind erforderlich.');
       const { error } = await supabase.from('tagesaufgaben_hinweise').insert({
-        firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie,
+        firma_id: state.firm,
+abteilung_id: state.abt,
+linie_id: state.linie || null,
+
         datum: date, text
       });
       if(error){ alert(error.message); return; }
@@ -418,8 +427,13 @@ state.role = active.role;
     }
 
     async function refreshAll(skipHistory=false){
-      if(!state.abt || !state.linie){ colPermanent.innerHTML = `<div class="empty">Bitte Abteilung & Linie wählen.</div>`;
-        colOnce.innerHTML = ''; colHints.innerHTML=''; return; }
+      if(!state.abt){
+  colPermanent.innerHTML = `<div class="empty">Bitte Abteilung wählen.</div>`;
+  colOnce.innerHTML = '';
+  colHints.innerHTML = '';
+  return;
+}
+
 
       await Promise.all([renderPermanent(), renderOnce(), renderHints()]);
       if(!skipHistory && (state.role==='owner' || state.role==='admin')){
@@ -432,7 +446,12 @@ state.role = active.role;
       const { data, error } = await supabase
         .from('tagesaufgaben_templates')
         .select('id, titel, beschreibung')
-        .match({ firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie, typ:'permanent', aktiv:true })
+        .eq('firma_id', state.firm)
+.eq('abteilung_id', state.abt)
+.eq('typ', 'permanent')
+.eq('aktiv', true)
+.eq('linie_id', state.linie ?? null)
+
         .order('id');
       if(error){ colPermanent.innerHTML = `<div class="empty">${error.message}</div>`; return; }
 
@@ -488,7 +507,13 @@ if (doneSet.has(`${tpl.id}|${state.today}`)) {
       const { data, error } = await supabase
         .from('tagesaufgaben_templates')
         .select('id, titel, beschreibung, datum')
-        .match({ firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie, typ:'einmalig', aktiv:true, datum: state.today })
+        .eq('firma_id', state.firm)
+.eq('abteilung_id', state.abt)
+.eq('typ', 'einmalig')
+.eq('aktiv', true)
+.eq('datum', state.today)
+.eq('linie_id', state.linie ?? null)
+
         .order('id');
       if(error){ colOnce.innerHTML = `<div class="empty">${error.message}</div>`; return; }
       if(!data?.length){ colOnce.innerHTML = `<div class="empty">Keine besonderen Aufgaben heute.</div>`; return; }
@@ -525,7 +550,11 @@ if (doneSet.has(`${tpl.id}|${state.today}`)) {
       const { data, error } = await supabase
         .from('tagesaufgaben_hinweise')
         .select('id, text')
-        .match({ firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie, datum: state.today })
+        .eq('firma_id', state.firm)
+.eq('abteilung_id', state.abt)
+.eq('linie_id', state.linie ?? null)
+.eq('datum', state.today)
+
         .order('id');
       if(error){ colHints.innerHTML = `<div class="empty">${error.message}</div>`; return; }
 
@@ -548,7 +577,8 @@ if (doneSet.has(`${tpl.id}|${state.today}`)) {
       const payload = {
   firma_id: state.firm,
   abteilung_id: state.abt,
-  linie_id: state.linie,
+  linie_id: state.linie || null,
+
   template_id,
   datum: state.today,
   schicht: getCurrentShift(),
@@ -571,7 +601,10 @@ if (doneSet.has(`${tpl.id}|${state.today}`)) {
       const { data, error } = await supabase
         .from('tagesaufgaben_history_view') // siehe SQL unten (VIEW)
         .select('*')
-        .match({ firma_id: state.firm, abteilung_id: state.abt, linie_id: state.linie })
+        .eq('firma_id', state.firm)
+.eq('abteilung_id', state.abt)
+.eq('linie_id', state.linie ?? null)
+
         .gte('datum', since)
         .order('completed_at', { ascending:false })
         .limit(100);
